--- a/Angular/cafe_management_frontend/package.json
+++ b/Angular/cafe_management_frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@types/file-saver": "^2.0.7",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
